<resources>
    <string name="app_name">Home</string>
    <string name="grettings1">Bom dia!</string>
    <string name="grettings2">Bem-vinda, Ana!</string>
    <string name="edit_perfil_button">Editar perfil</string>
    <string name="search_video_button">Buscar vídeo</string>
    <string name="request_new_video_button">Solicitar novo vídeo</string>
    <string name="pending_requests">Solicitações pendentes</string>
    <string name="history">Histórico</string>
    <string name="contact_us">Fale conosco</string>
</resources>